add more meta, WWRW & Perfectionist

--- a/Books/Women_Run_With_Wolves/Before-Intro/index.html
+++ b/Books/Women_Run_With_Wolves/Before-Intro/index.html
@@ -3,9 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="MachineryintheNight" />
+    <meta name="genre" content="Spiritualism" />
+    <meta name="genre" content="Feminism" />
+    <meta name="genre" content="Non-fiction" />
     <meta
       name="description"
-      content="WOMEN WHO RUN WITH THE WOLVES, is not just another book. It is a gift of profound insight, 
+      content="WOMEN WHO RUN WITH THE WOLVES, isn't just another book. It is a gift of profound insight, 
       wisdom, and love. An oracle from one who knows. Alice Walker"
     />
     <meta
@@ -13,6 +17,30 @@
       content="This volume reminds us that we are nature for all our sophistication, that was are still wild, 
       and the recovery of that vitality will itself set us right in the world. Thomas Moore"
     />
+    <meta
+      name="description"
+      content="I am grateful to WOMEN WHO RUN WITH THE WOLVES and Dr. Clarissa Pinkola Estés. 
+    The work shows the reader how glorious it is to be daring, to be caring, and the be women. 
+    Everyone who can read should read this book. Maya Angelou"
+    />
+
+    <meta
+      name="description"
+      content="A deeply spiritual book...She honors what is tough, smart, and untamed in women. 
+    She venerates the female soul. The Washington Post Book World"
+    />
+
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Book",
+        "name": "Women Who Run With the Wolves",
+        "author": {
+          "@type": "Person",
+          "name": "Clarissa Pinkola Estés, Ph.D"
+        }
+      }
+    </script>
     <title>Women Who Run With the Wolves</title>
   </head>
   <body></body>
