--- a/Books/Women_Run_With_Wolves/Women-Who-Run-With-the-Wolves/index.html
+++ b/Books/Women_Run_With_Wolves/Women-Who-Run-With-the-Wolves/index.html
@@ -43,5 +43,21 @@
     </script>
     <title>Women Who Run With the Wolves</title>
   </head>
-  <body></body>
+  <body>
+    <h1>Synopsis</h1>
+    <p>
+      Within every woman there lives a powerful force, filled with good
+      instincts, passionate creativity, and ageless knowing. She is the Wild
+      Woman, who represents the instinctual nature of women. But she is an
+      endangered species. In WOMEN WHO RUN WITH WOLVES, Dr. Estés unfolds rich
+      intercultural myths, fairy tales, and stories, many from her own family,
+      in order to help women reconnect with fierce, healthy, visionary
+      attributes of this instinctual nature. Through the stories and
+      commentaries in this remarkable book, we retrieve, examine, love, and
+      understand the Wild Woman and hold her against our deep psyches as one who
+      is both magic and medicine. Dr. Estés has created a new lexicon for
+      describing the female psyche. Fertile and life-giving, it is a psychology
+      of women in the truest sense, a knowing of the soul.
+    </p>
+  </body>
 </html>
