--- a/Books/Perfectionists/The-Perfectionist/index.html
+++ b/Books/Perfectionists/The-Perfectionist/index.html
@@ -24,9 +24,9 @@
   </head>
   <body>
     <h1>Synopsis</h1>
-    <p>
+    <p style="Synopsis">
       Precision is so essential a component of comtemporary human life and
-      existence that we seldom stop to think about it. Simon Winchester's The
+      existence that we seldom stop to think about it Simon Winchester's. The
       Perfectionist examines the relatively recent development of the notion of
       precision--the people who developed it and the ways in which it has shaped
       the modern world--and the challenges posed and losses risked by our
