add link to style sheets

--- a/Books/Perfectionists/The-Perfectionist/index.html
+++ b/Books/Perfectionists/The-Perfectionist/index.html
@@ -8,29 +8,36 @@
     <meta name="genre" content="Engineering" />
     <meta name="genre" content="History" />
     <meta name="genre" content="Non-fiction" />
+
     <meta
       name="description"
       content="Interesting, Informative, Exciting, and
     Emotional...A real treat. New York Times"
     />
+
     <meta
       name="description"
       content="Winchester is...a meticulous researcher and catholic thinker. James Gleick | New York Review of Books"
     />
-    { "@context": "https://schema.org", "@type": "Book", "name": "The
-    Perfectionist", "author": { "@type": "Person", "name": "Simon Winchester" }
-    }
+    <!-- <link rel="stylesheet" type="text/css" href="style-perfectionists.css" /> -->
+
+    <script type="application/ld+json">
+      { "@context": "https://schema.org", "@type": "Book", "name": "The
+      Perfectionist", "author": { "@type": "Person", "name": "Simon Winchester" }
+      }
+    </script>
     <title>The Perfectionist</title>
   </head>
   <body>
     <h1>Synopsis</h1>
-    <p style="Synopsis">
+    <p class="Synopsis">
       Precision is so essential a component of comtemporary human life and
       existence that we seldom stop to think about it Simon Winchester's. The
       Perfectionist examines the relatively recent development of the notion of
       precision--the people who developed it and the ways in which it has shaped
       the modern world--and the challenges posed and losses risked by our
       veneration and pursuit of increasingly precise tools and methods.<br />
+      <br />
 
       The history oof precision as a concept and in practice begins in England
       with its originators: John Wilkinson, Henry Maudslay, Joseph Bramah, Jesse
@@ -42,6 +49,7 @@
       the application of precision tools and methods in the development of guns,
       glass, mirrors, lenses, and cameras, gave way to further advancements,
       including gene splicing, microchips, and the Hadron Collider.<br />
+      <br />
 
       The fundamental questions at the heart of The Perfectionist are these: Why
       is precision important? has the pursuit of the ultraprecise in so many
