--- a/Books/Perfectionists/The-Perfectionist/index.html
+++ b/Books/Perfectionists/The-Perfectionist/index.html
@@ -19,7 +19,7 @@
       name="description"
       content="Winchester is...a meticulous researcher and catholic thinker. James Gleick | New York Review of Books"
     />
-    <link rel="stylesheet" type="text/css" href="style-perfectionists.css" />
+    <!-- <link rel="stylesheet" type="text/css" href="style-perfectionists.css" /> -->
 
     <script type="application/ld+json">
       { "@context": "https://schema.org", "@type": "Book", "name": "The
