restructure HTML/CSS removal

--- a/Books/Perfectionists/The-Perfectionist/PERFECTIONIST-BONES.html
+++ b/Books/Perfectionists/The-Perfectionist/PERFECTIONIST-BONES.html
@@ -20,21 +20,15 @@
       content="Winchester is...a meticulous researcher and catholic thinker. James Gleick | New York Review of Books"
     />
     <link rel="stylesheet" type="text/css" href="./styles-perfectionist.css" />
-
-    <script type="application/ld+json">
-      { "@context": "https://schema.org", "@type": "Book", "name": "The
-      Perfectionist", "author": { "@type": "Person", "name": "Simon Winchester" }
-      }
-    </script>
     <title>The Perfectionist</title>
   </head>
 
   <body>
-    <div class="page">
-      <header class="header"></header>
-      <div class="synopsis__card">
+    <div>
+      <header></header>
+      <div>
         <h1>Synopsis</h1>
-        <div class="synopsis__guts">
+        <div 
           <p>
             Precision is so essential a component of comtemporary human life and
             existence that we seldom stop to think about it Simon Winchester's.
