--- a/Books/Women_Run_With_Wolves/Women-Who-Run-With-the-Wolves/WWRWW-BONES.html
+++ b/Books/Women_Run_With_Wolves/Women-Who-Run-With-the-Wolves/WWRWW-BONES.html
@@ -29,18 +29,8 @@
       content="A deeply spiritual book...She honors what is tough, smart, and untamed in women. 
     She venerates the female soul. The Washington Post Book World"
     />
-    <!-- <link rel="stylesheet" type="text/css" href="style-WWRWW.css" /> -->
-    <script type="application/ld+json">
-      {
-        "@context": "https://schema.org",
-        "@type": "Book",
-        "name": "Women Who Run With the Wolves",
-        "author": {
-          "@type": "Person",
-          "name": "Clarissa Pinkola Estés, Ph.D"
-        }
-      }
-    </script>
+    <link rel="stylesheet" type="text/css" href="style-WWRWW.css" />
+
     <title>Women Who Run With the Wolves</title>
   </head>
   <body>
