--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <main class="lobby-container">
       <header class="hero">
-        <h1>Welcome to the Archives...not all who wander are lost</h1>
+        <h1>Welcome to Wonderland...not all who wander are lost</h1>
         <p>
           These words are rewritten,<br />
           word for word,<br />
@@ -37,7 +37,7 @@
         <div class="card-grid">
           <article class="card">
             <h3>The Code Book</h3>
-            <h5>by<em>Simon Singh</em></h5>
+            <h5>by <em>Simon Singh</em></h5>
             <p>
               <em
                 >This is a rewrite project focusing on interactive structure</em
@@ -50,7 +50,7 @@
 
           <article class="card coming-soon">
             <h3>Death in Venice</h3>
-            <h5>by<em>Thomas Mann</em></h5>
+            <h5>by <em>Thomas Mann</em></h5>
             <p>
               One of the most famous literary works of the twentieth century,
               the novella "Death in Venice" embodies themes that preoccupied
