tweak global styles

--- a/index.html
+++ b/index.html
@@ -37,11 +37,45 @@
         <div class="card-grid">
           <article class="card">
             <h3>The Code Book</h3>
-            <h5>by <em>Simon Singh</em></h5>
+            <span class="by">written by Simon Singh</span>
+
             <p>
               <em
                 >This is a rewrite project focusing on interactive structure</em
               >
+
+              <br />
+            </p>
+            <br />
+            <p>
+              Practically since humans began writing, they have been writing in
+              code, and ciphers have decided the fates pf empires throughout
+              recorded history. In <em>The Code Book</em>, Simon Singh offers a
+              sweeping history of the subject of encryption. Combining a
+              storyteller's sense of drama with a scientist's appreciation for
+              technical perfection, he traces the evolution of its methods and
+              reveals its dramatic effects on wars, nations, and individual
+              lives. <br />
+            </p>
+            <br />
+            <p>
+              From Mary, Queen of Scots, trapped by her own code and put to
+              death by Queen Elizabeth, to the Navajo Code talkers who helped
+              the Allies win World War II, to the incredible (and incredibly
+              simple) breakthrough that made internet commerce secure, The Code
+              Book tell the story of the most powerful intellectual weapon ever
+              known: secrecy. <br />
+            </p>
+            <br />
+            <p>
+              Woven throughout are clear technological and mathematical
+              explanations, and portrayals of the remarkable
+              personalities---many courageous, some villainous, and all
+              obsessive---who wrote and broke the worlds's most diffcult codes.
+              Accessible, compelling, and remarkably far-reaching, this book
+              will forever alter your view of history, what drives it, and how
+              private that e-mail you just sent really is.<br />
+              <span class="curious">Curiouser and Curiouser...</span>
             </p>
             <a href="books/code-book/index.html" class="btn"
               >Read Book &rarr;</a
@@ -50,7 +84,13 @@
 
           <article class="card coming-soon">
             <h3>Death in Venice</h3>
-            <h5>by <em>Thomas Mann</em></h5>
+            <span class="by">written by Thomas Mann</span>
+            <p>
+              <em
+                >This is a rewrite project focusing on interactive structure</em
+              >
+            </p>
+            <br />
             <p>
               One of the most famous literary works of the twentieth century,
               the novella "Death in Venice" embodies themes that preoccupied
@@ -71,7 +111,7 @@
         <ul class="article-list">
           <li>
             <a href="articles/muons-emblems-discovery.html"
-              >Muons:Emblems of discovery</a
+              >Muons : Emblems of discovery</a
             >
             <span class="date">- Jan 2026</span>
           </li>
