add TOC chapter titles/ add CSS TOC

--- a/books/code-book/index.html
+++ b/books/code-book/index.html
@@ -1,9 +1,10 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Table of Contents | The Code Book</title>
+    <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body>
     <nav class="main-nav">
@@ -35,26 +36,58 @@
               <span class="chapter-title"
                 >The Cipher of Mary Queen of Scots</span
               >
-              <span class="date">Transcribed: Jan 16 2026</span>
+              <br />
+              <span class="date">Transcribed: Jan 18 2026</span>
             </a>
           </li>
           <li>
-            <span class="chapter-title">(Coming Soon)</span>
+            <a href="chapters/ch02.html"
+              ><span class="chapter-title">Le Chiffere Indéchiffrable</span>
+              <br />
+              <span class="date">Transcribed: Jan 18 2026</span>
+            </a>
           </li>
           <li>
-            <span class="chapter-title">(Coming Soon)</span>
+            <a href="chapters/ch03.html">
+              <span class="chapter-title">The Mechanization of Secrecy</span>
+              <br />
+              <span class="date">Transcribed: Jan 18 2026</span>
+            </a>
           </li>
           <li>
-            <span class="chapter-title">(Coming Soon)</span>
+            <a href="chapters/ch04.html">
+              <span class="chapter-title">Cracking the Enigma</span>
+              <br />
+              <span class="date">Transcribed: Jan 18 2026</span>
+            </a>
           </li>
           <li>
-            <span class="chapter-title">(Coming Soon)</span>
+            <a href="chapters/ch05.html">
+              <span class="chapter-title">The Language Barrier</span>
+              <br />
+              <span class="date">Transcribed: Jan 18 2026</span>
+            </a>
           </li>
           <li>
-            <span class="chapter-title">(Coming Soon)</span>
+            <a href="chapters/ch06.html">
+              <span class="chapter-title">Alice and Bob Go Public</span>
+              <br />
+              <span class="date">Transcribed: Jan 18 2026</span>
+            </a>
           </li>
           <li>
-            <span class="chapter-title">(Coming Soon)</span>
+            <a href="chapters/ch07.html">
+              <span class="chapter-title">Pretty Good Privacy</span>
+              <br />
+              <span class="date">Transcribed: Jan 18 2026</span>
+            </a>
+          </li>
+          <li>
+            <a href="chapters/ch08.html">
+              <span class="chapter-title">A Quantum Leap into the Future</span>
+              <br />
+              <span class="date">Transcribed: Jan 18 2026</span>
+            </a>
           </li>
         </ol>
 
